 # CMakeLists.txt from https://dpp.brainbox.cc/buildcmake.html

# minimum CMake version required
cmake_minimum_required(VERSION 3.15)
# Project name, version and description
project(GentooInstaller VERSION 1.0 DESCRIPTION "Bad Shape Calculator")


# Create an executable
#add_executable(${PROJECT_NAME}
#    src/main.cpp
    # your others files...
#)

file(GLOB_RECURSE source_list "src/*.cpp" "src/*.hpp")
add_executable(${PROJECT_NAME} ${source_list})
#file(GLOB ${PROJECT_NAME} CONFIGURE_DEPENDS "*.h" "*.cpp")


# Set C++ version
set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17 # or 20 if you want something more recent
    CXX_STANDARD_REQUIRED ON
 )
